--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,8 @@
 <!-- (module
   (import "console" "log" (func $log))
   (import "console" "error" (func $error))
+  (memory $mem 1)
+  (data (i32.const 0) "Hi")
   (func $sum (param $a i32) (param $b i32) (result i32)
     call $log
     call $error
@@ -26,5 +28,6 @@
     local.get $b
     i32.add
   )
+  (export "memory" (memory $mem))
   (export "sum" (func $sum))
 ) -->
